Fixed scroll cutoff, tap to make room, input width bugs

--- a/client/layout/layout/_container.scss
+++ b/client/layout/layout/_container.scss
@@ -9,22 +9,32 @@
     right: 0;
     overflow: hidden;
     height: 100%;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
 }
 
 .main-container {
-    position: relative;
-    flex: 1;
-    height: 100%;
+    // position: relative;
+    // flex: 1;
+    // overflow: hidden;
+    // height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-top: $topbar-height;
     transform: none;
 
-    &.animatable {
+    &.splash {
+        margin-top: 160px;
         transition: transform 300ms;
     }
 
-    &.collapsed {
+    &.splash-collapsed {
         transform: translateY(-95px);
+        margin-top: 160px;
+        transition: transform 300ms;
 
         .content_inner {
             margin-bottom: 95px;
