--- a/client/layout/layout/_main.scss
+++ b/client/layout/layout/_main.scss
@@ -4,6 +4,7 @@
     z-index: 2;
     margin-left: $sidebar-width;
     background: $dark-background-color;
+    overflow: hidden;
 
     &.no-sidebar {
         margin-left: 0px;
