--- a/client/layout/pages/_upload.scss
+++ b/client/layout/pages/_upload.scss
@@ -1,6 +1,7 @@
 .upload {
     padding: 15px;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     height: 100%;
 }
 
@@ -164,6 +165,7 @@
     padding-right: 60px;
     margin-right: 20px;
     position: relative;
+    cursor: pointer;
 
     &.selected {
         background: linear-gradient(to bottom, rgba($primary-color, 0.1) 0%, rgba(1,1,1,0) 100%); 
@@ -304,6 +306,7 @@
     display: inline-block;
     vertical-align: top;
     width: 360px;
+    max-width: 100%;
     margin-right: 20px;
     margin-bottom: 15px;
 }
